<resources>
    <string name="app_name">Stormy</string>
    <string name="error_title">Oops! Sorry!</string>
    <string name="error_message">There\'s an error. Please try again.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="default_temperature">-</string>
    <string name="degree">degree</string>
    <string name="default_time">...</string>
    <string name="default_location">...</string>
    <string name="humidity">HUMIDITY</string>
    <string name="weather_icon">weather icon</string>
    <string name="default_humidity">-</string>
    <string name="rain">RAIN?</string>
    <string name="default_precipitation">-</string>
    <string name="stormy_with_a_chance_of_meatballs">...</string>
    <string name="refresh_button">refresh button</string>
    <string name="no_daily_forecast_data">There is no data to display.</string>
    <string name="circle_image">circle image</string>
    <string name="icon_image">icon image</string>
    <string name="asia_taipei">Asia/Taipei</string>
    <string name="this_week_s_weather">This Week\'s Weather</string>
</resources>
