<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="16dp"
    tools:context="com.rq.stormy.ui.MainActivity">

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:singleLine="true"
        android:text="@string/default_temperature"
        android:textColor="@android:color/white"
        android:textSize="150sp" />

    <ImageView
        android:id="@+id/degreeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/temperatureTextView"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@+id/temperatureTextView"
        android:contentDescription="@string/degree"
        app:srcCompat="@drawable/degree"/>

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/default_time"
        android:textColor="#80FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/default_location"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/locationTextView"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/weather_icon"
        app:srcCompat="@drawable/clear_day" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textColor="#80FFFFFF" />

            <TextView
                android:id="@+id/humidityValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_humidity"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/precipitationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rain"
                android:textAlignment="center"
                android:textColor="#80FFFFFF" />

            <TextView
                android:id="@+id/precipitationValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_precipitation"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/summaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/stormy_with_a_chance_of_meatballs"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/refreshImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/refresh_button"
        app:srcCompat="@drawable/refresh" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/refreshImageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hourlyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#40FFFFFF"
            android:text="HOURLY"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/dailyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="#40FFFFFF"
            android:text="7 DAY"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
